# susc-converter

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
custom_sus_io/: __init__.py  dumper.py  loader.py  schemas.py
src/notes/: bpm.py  guide.py  metadata.py  score.py  single.py  slide.py  timescale.py
src/sus/: exporter.py
src/usc/: loader.py
susc/notes/: __init__.py  bpm.py  guide.py  metadata.py  score.py  single.py  slide.py  timescale.py
susc/sus/: __init__.py  exporter.py  loader.py  notetype.py
susc/usc/: __init__.py  exporter.py  loader.py
tests/: ccmmw.json  ccmmw.sus  ccmmw.usc  mmw.sus
