[tool.poetry]
name = "susc-tools"
version = "0.1.0"
description = ""
authors = ["kyonkrnk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = ">=0.5.6,<0.6.0"
base36 = ">=0.1.1,<0.2.0"
single-source = ">=0.2.0,<0.3.0"
marshmallow-enum = ">=1.5.1,<2.0.0"
typing-inspect = ">=0.4.0"
marshmallow = ">=3.3.0,<4.0.0"
packaging = ">=17.0"
typing-extensions = ">=3.7.4"
mypy-extensions = ">=0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
